eks-yaml/deployment.yaml
# @format

apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: your-docker-image:latest # Replace with your Docker image
          ports:
            - containerPort: 6969
