eks-yaml/arivgames-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arivgames-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 6969
  selector:
    app: arivgames
